test/oscar/compiler/errors/poolActorUndecl.oscar
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        println("Error");
    }
  }
}

def main() => unit = {
  pool<Worker> pool1 = spawn pool<Worker>({}, 0);
  message<testNow>() |>> pool1;
}